Fixed dropdown on mobile view to not load on page start 2nd attempy

--- a/styles.css
+++ b/styles.css
@@ -215,7 +215,7 @@ nav a:hover {
     }
 
     .navbar {
-        display: non;
+        display: none;
     }
 }
 
